data/all_generated_tests/raw_wast_tests/nop_InvalidorInconsistentControlFlowGraph_517.wast
;; 8. Integrate `nop` before and after a branch (`br`) instruction, checking if the branching behavior and target remains unaffected.    **Constraint:** Ensure `nop` does not influence branch execution or target.

(assert_invalid
  (module
    (func
      (block (br 0) (nop))
    )
  )
  "type mismatch"
)